<resources>
    <string name="app_name">AI_Projects</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="prompt_refiner">Prompt Refiner</string>
    <string name="the_random_value">The random value</string>
    <string name="submit">Submit</string>
    <string name="enter_your_prompt_here">Enter your prompt here</string>
    <string name="copy_result_to_clipboard">Copy to clipboard</string>
    <string name="title_prompt_refiner">Prompt Refiner</string>
    <string name="food_recipe">Food Recipe</string>
    <string name="images">Images</string>
    <string name="colors">Colors</string>
    <string name="github">Github</string>
    <string name="stories">Stories</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="yield_label">Yield</string>
    <string name="prep_time_label">Prep Time</string>
    <string name="cook_time_label">Cook Time</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="instructions_label">Instructions</string>
    <string name="apply_filters">Apply filters</string>
    <string name="filter_recipes">Filter Recipes</string>
    <string name="apply">Apply</string>
    <string name="region_e_g_italian_mexican">Region (e.g., Italian, Mexican)</string>
    <string name="ingredients_comma_separated">Ingredients (comma-separated)</string>
    <string name="other_considerations_e_g_gluten_free">Other Considerations (e.g., gluten-free)</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading...</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="no_recipes_saved_yet">No recipes saved yet!</string>
    <string name="delete_recipe">Delete recipe button</string>
    <string name="show_saved_recipe">Saved Recipes</string>
    <string name="generate_random_image">Generate random image</string>
    <string name="generate_image_by_colors">Generate image by color</string>
    <string name="copy_prompt_to_clipboard">Copy prompt to clipboard</string>
    <string name="generated_image_description">Generated image</string>
    <string name="image_keywords_title">Add Image Keywords</string>
    <string name="comma_separated_keywords_hint">Comma separated keywords (e.g., nature, sunset, vibrant)</string>
    <string name="download">Download</string>
    <string name="select_color_palette">Select Color Palette</string>
    <string name="edit_color_1">Edit Color 1</string>
    <string name="color_2">Color 2:</string>
    <string name="edit_color_2">Edit Color 2</string>
    <string name="color_3">Color 3:</string>
    <string name="edit_color_3">Edit Color 3</string>
    <string name="color_4">Color 4:</string>
    <string name="edit_color_4">Edit Color 4</string>
    <string name="color_5">Color 5:</string>
    <string name="edit_color_5">Edit Color 5</string>
    <string name="color_1">Color 1:</string>
    <string name="saved_images">Saved Images</string>
    <string name="info_about_core_premise">Info about Core Premise</string>
    <string name="core_premise">Core Premise</string>
    <string name="key_elements">Key Elements</string>
    <string name="protagonist">Protagonist</string>
    <string name="antagonist">Antagonist</string>
    <string name="story_parameters">Story Parameters</string>
    <string name="programming">Programming</string>
    <string name="dsa_problem">DSA problem</string>
    <string name="copy_problem">Copy Problem</string>
    <string name="filter_dsa_problems">Filter DSA Problems</string>
    <string name="data_structure_type">Data Structure Type</string>
    <string name="algorithm_type">Algorithm Type</string>
    <string name="programming_language">Programming Language</string>
    <string name="complexity">Complexity</string>
    <string name="other_considerations_optional">Other Considerations (Optional)</string>

    <string-array name="data_structure_types">
        <item>Select Data Structure</item>
        <item>Array</item>
        <item>Linked List</item>
        <item>Tree</item>
        <item>Graph</item>
        <item>Heap</item>
        <item>Hash Map</item>
        <item>Stack</item>
        <item>Queue</item>
    </string-array>

    <string-array name="algorithm_types">
        <item>Select Algorithm Type</item>
        <item>Dynamic Programming</item>
        <item>Greedy</item>
        <item>Sorting</item>
        <item>Searching</item>
        <item>DFS</item>
        <item>BFS</item>
        <item>Backtracking</item>
        <item>Divide and Conquer</item>
    </string-array>

    <string-array name="programming_languages">
        <item>Select Language</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>C++</item>
        <item>JavaScript</item>
        <item>Go</item>
    </string-array>

    <string-array name="complexity_levels">
        <item>Select Complexity</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>