<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fr_menu_save"
        android:icon="@drawable/ic_bookmark_no_fill"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/fr_menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/fr_menu_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/apply_filters"
        app:showAsAction="always" />

    <item
        android:id="@+id/fr_menu_show_list"
        android:icon="@drawable/ic_show_list"
        android:title="@string/show_saved_recipe"
        app:showAsAction="always" />
</menu>